<resources>
    <string name="app_name">C1 Weather</string>
    <string name="city_picker_header">Weather App</string>
    <string name="city_country">US</string>
    <string name="humidity_icon">Humidity icon</string>
    <string name="weather_icon">Weather icon</string>
    <string name="windspeed_text">Windspeed</string>
    <string name="sunrise_text">Sunrise</string>
    <string name="sunset_text">Sunset</string>
    <string name="pressure_text">Pressure</string>
    <string name="current_state_image">Current state image</string>
    <string name="error_state_text">We are having some technical difficulties, please try again later</string>
</resources>